--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "RSS Aggregator",
   "main": "index.js",
   "scripts": {
-    "test": "jest --colors"
+    "test": "npx jest --bail"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/IvanMogilevskiy/frontend-project-lvl3#readme",
   "devDependencies": {
+    "@jest/globals": "^28.1.3",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.3"
   }
 }
