--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "@hexlet/code",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "type": "module",
-  "description": "RSS Aggregator",
-  "main": "index.js",
+  "description": "My webpack project",
+  "main": "src/index.js",
   "scripts": {
-    "test": "npx jest --bail"
+    "test": "npx jest --bail",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve",
+    "start": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -19,10 +24,26 @@
   "homepage": "https://github.com/IvanMogilevskiy/frontend-project-lvl3#readme",
   "devDependencies": {
     "@jest/globals": "^28.1.3",
+    "@webpack-cli/generators": "^2.5.0",
+    "autoprefixer": "^10.4.8",
+    "css-loader": "^6.7.1",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
-    "jest-cli": "^28.1.3"
+    "jest-cli": "^28.1.3",
+    "postcss-loader": "^7.0.1",
+    "sass": "^1.54.3",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.0"
   }
 }
