--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-webpack-project",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "My webpack project",
   "main": "src/index.js",
@@ -28,6 +28,7 @@
     "@webpack-cli/generators": "^2.5.0",
     "autoprefixer": "^10.4.8",
     "css-loader": "^6.7.1",
+    "debug": "^4.3.4",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -36,8 +37,7 @@
     "jest": "^28.1.3",
     "jest-cli": "^28.1.3",
     "postcss-loader": "^7.0.1",
-    "sass": "^1.54.3",
-    "sass-loader": "^13.0.2",
+    "postcss-preset-env": "^7.8.2",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
@@ -49,7 +49,10 @@
     "bootstrap": "^5.2.0",
     "i18next": "^21.9.1",
     "lodash": "^4.17.21",
+    "npm-check-updates": "^16.3.8",
     "on-change": "^4.0.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
     "yup": "^0.32.11"
   }
 }
