--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,13 +28,13 @@ jobs:
       - name: Run linter
         run: make lint
 
-      - name: Run tests
-        run: make test
+      # - name: Run tests
+      #   run: make test
 
-      - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v2.7.4
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+      # - name: Test & publish code coverage
+      #   uses: paambaati/codeclimate-action@v2.7.4
+      #   env:
+      #     CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      #   with:
+      #     coverageCommand: make test-coverage
+      #     debug: true
